--- a/analysis_service/requirements.txt
+++ b/analysis_service/requirements.txt
@@ -1,9 +1,10 @@
-fastapi==0.110.0
-uvicorn==0.27.1
-python-multipart==0.0.9
-python-dotenv==1.0.1
-pypdf==4.0.1
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
+python-dotenv==1.0.0
+pypdf==3.17.1
 python-docx==1.1.0
-httpx==0.27.0
-pydantic==2.6.1
+httpx==0.25.2
+pydantic==2.5.0
 pydantic-settings==2.1.0
+google-generativeai==0.3.2
