--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,21 @@
 # APP configuration
-APP_NAME="Flask API Rest Template"
+APP_NAME="Resume Ranking API"
 APP_ENV="develop"
 
 # Flask Configuration
-FLASK_APP= "app:app"
-FLASK_DEBUG="false"
+FLASK_APP="app:app"
+FLASK_DEBUG="true"
 APP_SETTINGS_MODULE="config.DevelopConfig"
 APP_TEST_SETTINGS_MODULE="config.TestingConfig"
 FLASK_RUN_HOST="0.0.0.0"
 FLASK_RUN_PORT="5000"
 
 # Database service configuration
-DATABASE_URL="postgresql://db_user:db_password@localhost/db_dev"
-DATABASE_TEST_URL="postgresql://db_user:db_password@localhost/db_test"
+MONGO_URL="mongodb://localhost:27017/resume_ranking_db"
+MONGO_TEST_URL="mongodb://localhost:27017/resume_ranking_test_db"
 
-OPENAI_API_KEY=""
+# Analysis service url
+ANALYSIS_SERVICE_URL="http://localhost:7000"
+
+# Secret app
+SECRET_KEY="your-secret-key-change-in-production"
